# C-language-minimum-path

./: CMakeLists.txt  teste.txt
entradas/: teste.txt
main/: main.c
main/entradas/: entrada.txt
main/lib/grafo/: Grafo.c  Grafo.h
main/saida/: viasAsfaltadas.txt
main/services/controleEntradaSaida/: ControleArquivo.c  ControleArquivo.h
main/services/controler/: Controler.c  Controler.h
main/services/geradorArquivo/: GeradorArquivo.c
